apps/juxtaposition-ui/webfiles/web/css/web.css
/* ... */
.post-hamburger {
  display: none;
}
[aria-expanded="true"] > .post-hamburger {
  display: block;
}


.post-hamburger > li {
  width: 200px;
  padding: 0.5em 1em;

  background: var(--background-alt);
}
.post-hamburger > li:hover {
  background: var(--background-alt-alt);
}

/* Images in hamburger items should display inline */
.post-hamburger > li > * {
  vertical-align: sub;
}


#load-more {
  width: 632px;
  margin-bottom: 1em;
}

#toast,
iframe {
  border-radius: 1em;
}

#toast {
  min-width: 250px;
  margin-left: -141px;
  background-color: var(--btn);
  color: var(--text);
  text-align: center;
  position: fixed;
  z-index: 1000;
  left: 50%;
  top: 100vh;
  opacity: 0;
  padding: 1ch;
  transition: all 0.5s ease;
}

#toast.show {
  opacity: 1;
  transform: translateY(-130%);
}

.community-list-wrapper {
  display: grid;
  grid-template-areas: "icon main" "icon footer";
  gap: 0;
  cursor: pointer;
  background: var(--background-alt);
  padding: 1em;
  width: 90%;
  border-radius: 1em;
  grid-template-columns: 111px 152px;
}

.community-list-icon {
  width: 100px;
  height: 100px;
  grid-area: icon;
  margin-right: 1em;
  border-radius: 1em;
  -webkit-border-radius: 1em;
  -moz-border-radius: 1em;
  -ms-border-radius: 1em;
  -o-border-radius: 1em;
}

.community-list-title {
  margin: 0.5em 0-1em;
  font-size: 2ch;
}

.community-list-followers {
  margin: 0.5em 0 0;
  font-size: 1.5ch;
}

.communities-wrapper {
  display: grid;
  max-width: 900px;
  grid-template-columns: auto auto auto;
  grid-row-gap: 1em;
  grid-column-gap: 1em;
}

#new {
  margin-bottom: 1em;
}

iframe {
  width: 100%;
  height: 20em;
  margin-top: 1em;
}

.notifications-list-content {
  background: var(--background-alt);
  width: 600px;
  min-height: 4em;
  margin: 0;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  border-bottom: 2px solid var(--btn-secondary);
  user-select: none;
  cursor: pointer;
  font-size: small;
}

.notifications-list-content:hover {
  text-decoration: none;
  background: var(--btn-secondary);
}

.notifications-list-content:first-of-type {
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}

.notifications-list-content:last-of-type {
  border-bottom-left-radius: 1em;
  border-bottom-right-radius: 1em;
}

.unread-badge {
  padding: 0.25em;
  border-radius: 1em;
  margin: 1em;
  background-color: var(--btn);
}

.community-top {
  background: var(--background-alt);
  margin-bottom: 1em;
  padding: 1em;
  border-radius: 1em;
  width: 600px;
  overflow: hidden;
}

.community-info {
  display: flex;
}

.info-boxes-wrapper {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}

.info-boxes-wrapper > div {
  background: var(--background-alt-alt);
  border-radius: 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0.5em;
  flex-grow: 1;
}

.info-boxes-wrapper > div > h4:first-child {
  margin: 0.75em 0 0;
  color: var(--theme-light);
  font-size: small;
  font-weight: bolder;
}

.info-boxes-wrapper > div > h4:last-child {
  margin: 0.75em 0;
  color: var(--text-secondary);
  font-size: small;
}

.community-title {
  padding-left: 0.5em;
  font-size: larger;
  padding-top: 0.5em;
}

.banner {
  width: 110%;
  margin: -1em;
}

.community-page-follow-button-wrapper {
  padding: 0.25em;
  border: 2px solid var(--btn);
  border-radius: 1em;
  margin: 1.5em 0 auto auto;
  cursor: pointer;
  height: fit-content;
}

.community-page-follow-button-wrapper.selected,
.favorite-button.checked {
  background: var(--btn);
}

.community-page-follow-button-wrapper > p,
.favorite-button {
  margin: 0.25em;
  color: var(--text) !important;
}

.favorite-button {
  border: 2px solid var(--btn);
  border-radius: 1em;
  margin: 1.5em 0 auto auto;
  cursor: pointer;
  height: fit-content;
  text-decoration: none !important;
  padding: 1ch;
}

.list-content-with-icon-and-text {
  list-style: none;
  padding: unset;
}

.list-content-with-icon-and-text li {
  display: flex;
  padding: 0.25em 0;
  border-bottom: 1px solid var(--text-secondary);
}

.list-content-with-icon-and-text .body {
  margin-left: 1em;
  width: 100%;
  align-items: center;
  display: inherit;
  text-decoration: none;
}

#news-list-content li .text .nick-name {
  font-weight: 700;
  color: var(--text);
}

#news-list-content li .text .link {
  color: var(--theme-light);
}

#news-list-content li .text .timestamp,
#news-list-content li .text .pid-display {
  color: #969696;
  white-space: nowrap;
}

.hover {
  width: 600px;
  display: inherit;
  border-radius: 1em;
  padding: 1em;
}

.hover:hover {
  background: var(--background-alt);
}

.body.messages {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start !important;
}

.body.messages > .text {
  padding-bottom: 0.5ch;
}

.report h4,
.report p {
  margin: 0 0 5px 0;
}

.list-content-with-icon-and-text li.reports {
  flex-direction: column;
}

.reports .hover:hover {
  background: unset;
}

.reports button {
  margin-bottom: 1em;
}

button.report {
  margin-bottom: 1.5em;
  max-width: 630px;
  width: 90vw;
}

#report-form-modal {
  width: 100vw;
  height: 100vh;
  
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;

  background: rgba(0, 0, 0, .4);
}

#report-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
  padding: 1em 2em;
  margin: auto;
  max-width: 600px;

  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  
  background: var(--background-alt);
  border-radius: 0.75em;
}

#report-form .report > div {
  display: flex;
  justify-items: center;
  align-items: center;
  justify-content: center;
  margin-top: 13px;
}

#report-form .report > textarea {
  width: 100%;
  height: 100px;
  border-radius: 1em;
  border: none;
  background: var(--text);
  padding: 10px;
  margin: 1em 0;
  resize: none;
}

[hidden] {
  display: none !important;
}
/* ... */

